fixed most of flicker

--- a/imports/ui/stylesheets/landing.scss
+++ b/imports/ui/stylesheets/landing.scss
@@ -10,6 +10,7 @@
   background: url("./felix_marseille.jpg");
   background-size: cover;
   background-position: center center;
+  -webkit-transform:translate3d(0,0,0);
 }
 .jumbotron-overlay {
   position:absolute;
@@ -26,14 +27,6 @@
   background: -moz-radial-gradient(top left at 2em 2em, rgba(white,0) 0%, rgba(white,0.15) 50%, rgba(white,1) 72%); /* For Firefox 3.6 to 15 */
   background: radial-gradient(ellipse farthest-corner at 2em 4em, rgba(white,0) 0%, rgba(white,0.15) 50%, rgba(white,1) 72%); /* Standard syntax (must be last) */
 }
-// .center {
-//   text-align: center;
-//   position: absolute;
-//   left: 50%;
-//   top: 50%;
-//   -webkit-transform: translate(-50%, -50%);
-//   transform: translate(-50%, -50%);
-// }
 .title-wrapper {
   height: 100vh;
 }
