--- a/imports/ui/stylesheets/project-card.scss
+++ b/imports/ui/stylesheets/project-card.scss
@@ -19,21 +19,16 @@
 .clearfix:after {
   clear: both;
 }
-//
-// body {
-//   background: #fff;
-//   color: #7b7b7b;
-//   font-weight: 400;
-//   font-size: 16px;
-//   font-family: "Martel Sans", Arial, sans-serif;
-//   -webkit-font-smoothing: antialiased;
-//   -moz-osx-font-smoothing: grayscale;
-//   overflow: hidden;
-//   overflow-y: scroll;
-//   /* force scroll to appear */
-// }
 
-/* helper class when showing content */
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
+  overflow-y: scroll;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
 .noscroll {
   overflow: hidden;
 }
@@ -54,136 +49,17 @@ button:focus {
   outline: none;
 }
 
-/* Sidebar */
-.sidebar {
-  text-align: center;
-  background: #f5f5f5;
-  z-index: 1000;
-  position: fixed;
-  width: 300px;
-  max-width: 100%;
-  height: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  padding: 2em 1em;
-}
-
-.sidebar h1 {
-  margin: 0.75em 0 0;
-  font-size: 2em;
-  line-height: 1;
-  font-family: "Playfair Display", serif;
-}
-
-.sidebar h1 span {
-  display: block;
-}
-
-/* Codrops links */
-.codrops-links {
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  white-space: nowrap;
-  min-height: 45px;
-}
-
-.codrops-links::after {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 1px;
-  height: 100%;
-  background: #ddd;
-  content: '';
-  -webkit-transform: rotate3d(0, 0, 1, 22.5deg);
-  transform: rotate3d(0, 0, 1, 22.5deg);
-}
-
-.codrops-icon {
-  display: inline-block;
-  margin: 0.5em;
-  padding: 0em 0;
-  width: 1.5em;
-  text-decoration: none;
-}
-
-.codrops-icon span {
-  display: none;
-}
-
-.codrops-icon:before {
-  margin: 0 5px;
-  text-transform: none;
-  font-weight: normal;
-  font-style: normal;
-  font-variant: normal;
-  font-family: 'codropsicons';
-  line-height: 1;
-  speak: none;
-}
-
-.codrops-icon--drop:before {
-  content: "\e001";
-}
-
-.codrops-icon--prev:before {
-  content: "\e004";
-}
-
-/* Demo links */
-.codrops-demos {
-  margin: 2em 0 0;
-  font-size: 0.75em;
-}
-
-.codrops-demos a {
-  display: inline-block;
-  margin: 0 0.5em;
-}
-
-.codrops-demos a.current-demo {
-  color: #333;
-  font-weight: bold;
-}
-
-.codrops-demos a.current-demo:focus {
-  color: #aaa;
-}
-
-.related {
-  font-size: 0.85em;
-  padding-bottom: 1em;
-}
-
-.related h3 {
-  margin: 3em 0 0.5em 0;
-  font-size: 0.95em;
-}
-
-.related a {
-  display: block;
-  color: inherit;
-}
-
-.related a:hover,
-.related a:focus {
-  color: #414741;
-}
-
-/* Main content */
 .main {
   position: relative;
   z-index: 50;
 }
 
-/* Grid container */
 .grid {
   position: relative;
+  -webkit-transform:translate3d(0,0,0);
+  transform:translate3d(0,0,0);
 }
 
-/* Overlay */
 .grid::after {
   content: '';
   background: white;
@@ -194,108 +70,22 @@ button:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  -webkit-transition: opacity 1s;
-  transition: opacity 1s;
+  -webkit-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+  -webkit-transform:translate3d(0,0,0);
+  transform:translate3d(0,0,0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .view-single .grid::after {
   opacity: 1;
+  -webkit-transform:translate3d(0,0,0);
+  transform:translate3d(0,0,0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
-/* Top bar above the grid */
-.top-bar {
-  background: #fff;
-  width: 100%;
-  line-height: 1;
-  padding: 15px 15px 10px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-}
-
-.top-bar__headline {
-  margin: 0;
-  font-size: 0.75em;
-  letter-spacing: 0;
-}
-
-/* Menu button for toggling the sidebar (appears on small screen) */
-.menu-toggle {
-  position: fixed;
-  z-index: 100;
-  display: block;
-  width: 25px;
-  height: 25px;
-  top: 14px;
-  left: 14px;
-  cursor: pointer;
-  background: none;
-  border: none;
-  display: none;
-  margin: -2px 15px 0 0;
-}
-
-.menu-toggle span {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  display: block;
-  width: 100%;
-  height: 2px;
-  background-color: #81c483;
-  font-size: 0px;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.menu-toggle span:before,
-.menu-toggle span:after {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #81c483;
-  content: '';
-}
-
-.menu-toggle span:before {
-  -webkit-transform: translateY(-7px);
-  transform: translateY(-7px);
-}
-
-.menu-toggle span:after {
-  -webkit-transform: translateY(7px);
-  transform: translateY(7px);
-}
-
-/* Filter/dropdown dummy on the right */
-.filter {
-  text-align: right;
-  font-size: 0.75em;
-  margin-left: auto;
-}
-
-.dropdown {
-  font-weight: bold;
-  margin-left: 5px;
-  cursor: pointer;
-  color: #81c483;
-}
-
-.dropdown::after {
-  content: '\25BC';
-  margin-left: 2px;
-  font-size: 80%;
-}
-
-/* Grid item */
 .grid__item {
   padding: 45px 55px 30px;
   position: relative;
@@ -318,7 +108,6 @@ button:focus {
   justify-content: center;
 }
 
-/* Grid item "border" */
 .grid__item::before {
   position: absolute;
   content: '';
@@ -333,7 +122,6 @@ button:focus {
   z-index: 10;
 }
 
-/* grid item element and full content element styles */
 .grid-title {
   margin: 0;
   font-size: 1.875em;
@@ -603,15 +391,22 @@ button:focus {
   visibility: hidden;
   z-index: 400;
   overflow: hidden;
+  -webkit-transform:translate3d(0,0,0);
+  transform:translate3d(0,0,0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .content.content--show {
   height: 100vh;
   pointer-events: auto;
   visibility: visible;
+  -webkit-transform:translate3d(0,0,0);
+  transform:translate3d(0,0,0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
-/* scroll helper wrap */
 .scroll-wrap {
   position: absolute;
   width: 100%;
@@ -983,5 +778,3 @@ button:focus {
     display: none;
   }
 }
-
-/*# sourceMappingURL=style1.css.map */
